Fix event bar colors in dark mode
This commit fixes colors for event bar in dark mode.

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -468,3 +468,15 @@ html.dark-mode ._wu0 {
 	--code-block-background: #1d1f21;
 	--code-block-border: #0a0c14;
 }
+
+html.dark-mode ._3nta {
+	border-bottom: 1px solid rgba(25, 38, 51, 0.8);
+}
+
+html.dark-mode ._2n3t {
+	background-color: var(--conversation-bg);
+}
+
+html.dark-mode ._2n3u {
+	color: var(--base-thiry);
+}
